--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,5 @@ services:
     staticPublishPath: dist
     redirects:
       - source: /*
+        destination: /index.html
         statusCode: 200
