--- a/render.yaml
+++ b/render.yaml
@@ -4,3 +4,7 @@ services:
     env: static
     buildCommand: npm run build
     staticPublishPath: dist
+    redirects:
+      - source: /*
+        destination: /index.html
+        statusCode: 200
